# Boids-simulation

./: .gitignore  README.md
backend/: app.py
engine/: CMakeLists.txt  main.cpp
